--- a/index.html
+++ b/index.html
@@ -905,7 +905,7 @@ animation: auto 12s infinite ease-in;
 .student{
   display: grid;
   grid-template-columns: 1fr 1fr;
-  column-gap: 8rem;
+  column-gap: 6rem;
   justify-content: space-between;
   justify-items: center;
   width: 100%;
@@ -922,7 +922,12 @@ animation: auto 12s infinite ease-in;
 }
 
 .DUQUE{
-  height: 450px;
+  display: grid; 
+  grid-template-columns: 1fr;
+  justify-content: center;
+  justify-items: center;
+  width: 100%;
+  height: auto;
 }
 .DUQUE1{
   display: grid; 
@@ -931,23 +936,28 @@ animation: auto 12s infinite ease-in;
   justify-items: center;
   column-gap: 1rem;
   width: 100%;
-  padding-top: 10px;
-  height: 500px;
+  height: 50%;
 }
-.DUQUE1 img{
+
+.ORDI1 img{
+width: 96.9%;
+height: auto;
+}
+
+.ORDI2 img{
 width: 100%;
-height: 50%;
+height: auto;
 }
+
+
 
 .TXT{
   width: 100%;
-  height: auto;
   height: auto;
     font-family:  'arial'; 
     font-size: 1.1rem; 
     color: rgba(13, 13, 13, 0.866);
     line-height: 25px;
-    padding: 10px;
     text-align: justify;
 }
 
@@ -959,7 +969,7 @@ height: 50%;
     justify-content: center;
     text-align: justify;
     width: 73%;
-    height: 590px;
+    height: 550px;
     padding-top: 10px;
     font-family:  'arial'; 
     font-size: 1.1rem; 
@@ -969,7 +979,7 @@ height: 50%;
 
 .Healthy{
   display: grid;
-  grid-template-columns: 0.85fr 1.25fr;
+  grid-template-columns: 0.85fr 1.2fr;
   column-gap: 1rem;
   justify-content: space-between;
   justify-items: center;
@@ -979,7 +989,7 @@ height: 50%;
   font-size: 1.1rem; 
   color: rgba(13, 13, 13, 0.866);
   line-height: 25px;
-  padding: 10px;
+
 }
 
 .STN1 img{
@@ -1025,17 +1035,6 @@ height: 50%;
   width: 100%;
   height: 85%;
 }
-
-.ORDI img{
-width: 100%;
-height: 52.23%;
-}
-
-.ORDI1 img{
-  width: 100%;
-  height: 52.23%;
-}
-
 
 </style>
 
@@ -1558,7 +1557,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
      </b>
     </div>
 
-    <div class="k1" style="border-top: 0.16rem dotted rgba(90, 90, 90, 0.563);">
+    <div class="k1" style="border-top: 0.16rem solid #000;">
       <a href="https://www.visionmondiale.ca/blog/education/pourquoi-leducation-est-elle-importante" target="_blank">
       <div class="student">
         <div>
@@ -1583,7 +1582,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
   </div>
 </div>
 
-    <div class="DQ">
+    <div class="k1">
 
       <div class="DUQUE">
 
@@ -1620,17 +1619,17 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
   <div class="DUQUE1">
   
-    <div class="ORDI">
+    <div class="ORDI1">
       <img src="https://www.zupimages.net/up/23/24/1dre.jpg" alt="Ardoise">
       <figure>
       <figcaption style=" color: #017ffe; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
         Apprentissage de la lettre E avec les accents 
       </figcaption>
 </figure>
-
     </div >
+
     <a href="https://blogs.worldbank.org/fr/education/preparer-les-filles-pour-lavenir-de-lafrique-approches-de-lautonomisation-par-les" target="_blank">
-  <div clas="ORDI1">
+  <div class="ORDI2">
         <img src="https://www.zupimages.net/up/23/24/umq5.jpg" alt="Enseignement au Burkina Faso">
         <figure>
         <figcaption style=" color: #017ffe; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
@@ -1668,7 +1667,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
           <img src="https://www.zupimages.net/up/23/16/0k53.jpg" alt="Centre hospitalier régional">
         <figure>
           <figcaption style=" color: #017ffe; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
-            Urgence du centre hospitalier régional de Ziniare
+            Centre hospitalier régional de Ziniare
             </figcaption>
     </figure>
     </div>
@@ -1677,7 +1676,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     <img src="https://www.zupimages.net/up/23/06/hx80.png" alt="Emergency Montreal Hospital">
     <figure>
       <figcaption style=" color: #017ffe; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
-        Urgence du CHUM de Montreal
+        CHUM de Montreal
         </figcaption>
 </figure>
 
