--- a/index.html
+++ b/index.html
@@ -1809,12 +1809,14 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                     <p>
                       
                       <br>La vision de Tiki N'Yiki a pour force motrice Gabriel dit Gaby, une personne handicapée physique ayant étudié au lycée Bassy de <a href="https://civitac.org/spip.php?article447" target="_blank">Ziniaré</a> et au lycée <a href="https://www.africabizinfo.com/fr-BF/lyc%C3%A9e-newton-descartes" target="_blank">Newton Descartes</a> de <a href="https://mairie-ouaga.bf/accueil" target="_blank">Ouagadougou.</a>
-                      Gabriel a par la suite travaillé pour plusieurs associations et/ou organisations faîtières dans lesquelles il a pu enseigner des enfants handicapés, des enfants orphelins, animé des séances de sensibilisation sur le handicap et l'inclusion sociale avec des enfants, des jeunes et aussi des personnes du troisième âge au <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso.</a> 
-                      Il est un fervent défenseur des droits de personnes handicapées. Gabriel apprend à coder pour mieux développer ce site web statique afin de présenter la vision de Tiki N'Yiki. 
+                      Fervent défenseur des droits de personnes handicapées, il a travaillé pour plusieurs associations s'occupant de personnes handicapées. C'est ainsi qu'il a enseigné des enfants handicapés, des enfants orphelins, animé des séances de sensibilisation sur le handicap et l'inclusion sociale avec des enfants, des jeunes et aussi des personnes du troisième âge au <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso.</a> 
+                      <br>
+                      <br>
+                       Gabriel apprend à coder pour mieux développer ce site web statique afin de présenter la vision de Tiki N'Yiki. 
                       Il est aussi un passionné de photographie, de lecture, d'histoire, de géographie, d'architecture et de hockey. 
                       <br>
                       <br>
-                      En 2017 Gabriel était obligé de s'exiler au Canada pour des raisons de sécurité. Présentement il est un résident permanent
+                      En 2017 il était obligé de s'exiler au Canada pour des raisons de sécurité. Présentement il est un résident permanent
                      Canadien et se reconstruit une nouvelle vie. Néanmoins il veut créer une fondation pour continuer de soutenir des projets
                     pour les enfants handicapés au Burkina Faso.
                     </p>      
