--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@ animation: auto 12s infinite ease-in;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 15.5px;
   line-height: 23.2px;
-  color: #050819f6;
+  color: rgba(1, 63, 247, 0.972);
   word-spacing: 1.5px;
   opacity: 0.93;
   text-align: justify;
@@ -994,7 +994,7 @@ height: auto;
   display: grid;
   grid-template-rows: 0.5fr 0.5fr;
   width: 100%;
-  height: 30%;
+  height: 50%;
 }
 
 .Avenue{
@@ -1335,7 +1335,7 @@ function myFunction() {
             <div class="CRT1">
             
         Le Burkina Faso est un pays sahélien, enclavé au coeur de l'Afrique de l'Ouest et s'étend sur une superficie de 
-        <em style="color: red">274.300 kilomètres carrés avec une population de 22.1 millions d'habitants. Le Burkina Faso partage des frontières au nord; nord-ouest par le Mali, à l'est par le Niger, au sud par la Côte-d'Ivoire, le Ghana, le Togo et le Bénin. 
+        <em style="color: rgb(0, 145, 255)">274.300 kilomètres carrés avec une population de 22.1 millions d'habitants. Le Burkina Faso partage des frontières au nord; nord-ouest par le Mali, à l'est par le Niger, au sud par la Côte-d'Ivoire, le Ghana, le Togo et le Bénin. 
         </em>  Il bénéficie d'un climat tropical sahélien caracterisé par 4 mois de pluviométrie et 8 mois de sécheresse. En dépit de cette réalité climatique, son économie repose en grande partie sur l'agriculture, l'élévage et le maraîchage
         Heureusement elle a commencé à se diversifie à travers d'autres secteurs comme les services et le numérique. 
         <br>  
@@ -1809,7 +1809,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                     <p>
                       
                       <br>La vision de Tiki N'Yiki a pour force motrice Gabriel dit Gaby, une personne handicapée physique ayant étudié au lycée Bassy de <a href="https://civitac.org/spip.php?article447" target="_blank">Ziniaré</a> et au lycée <a href="https://www.africabizinfo.com/fr-BF/lyc%C3%A9e-newton-descartes" target="_blank">Newton Descartes</a> de <a href="https://mairie-ouaga.bf/accueil" target="_blank">Ouagadougou.</a>
-                      Fervent défenseur des droits de personnes handicapées, il a travaillé pour plusieurs associations s'occupant de personnes handicapées. C'est ainsi qu'il a enseigné des enfants handicapés, des enfants orphelins, animé des séances de sensibilisation sur le handicap et l'inclusion sociale avec des enfants, des jeunes et aussi des personnes du troisième âge au <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso.</a> 
+                      Fervent défenseur des droits de personnes handicapées, il a travaillé pour plusieurs associations d'éducation, de défense et de sport pour ces personnes au <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso.</a> . Ainsi il a enseigné des enfants handicapés et orphelins, animé des séances de sensibilisation dont le thème est le handicap et l'inclusion sociale avec des enfants, des jeunes et aussi des personnes du troisième âge.
                       <br>
                       <br>
                        Gabriel apprend à coder pour mieux développer ce site web statique afin de présenter la vision de Tiki N'Yiki. 
@@ -1817,8 +1817,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                       <br>
                       <br>
                       En 2017 il était obligé de s'exiler au Canada pour des raisons de sécurité. Présentement il est un résident permanent
-                     Canadien et se reconstruit une nouvelle vie. Néanmoins il veut créer une fondation pour continuer de soutenir des projets
-                    pour les enfants handicapés au Burkina Faso.
+                     Canadien et se reconstruit une nouvelle vie dans à laquelle il veut intégrer la création d'une fondation pour continuer de soutenir des projets
+                    au profit des enfants handicapés au Burkina Faso.
                     </p>      
       </div>
 
