--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@ animation: auto 12s infinite ease-in;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 15.5px;
   line-height: 23.2px;
-  color: rgba(1, 63, 247, 0.972);
+  color: rgba(0, 69, 187, 0.996);
   word-spacing: 1.5px;
   opacity: 0.93;
   text-align: justify;
@@ -748,7 +748,7 @@ animation: auto 12s infinite ease-in;
     justify-content: center;
     text-align: left;
     width: 100%;
-    height: 26%;
+    height: 27%;
 }
 .kgp img{
     width: 100%;
@@ -1809,7 +1809,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                     <p>
                       
                       <br>La vision de Tiki N'Yiki a pour force motrice Gabriel dit Gaby, une personne handicapée physique ayant étudié au lycée Bassy de <a href="https://civitac.org/spip.php?article447" target="_blank">Ziniaré</a> et au lycée <a href="https://www.africabizinfo.com/fr-BF/lyc%C3%A9e-newton-descartes" target="_blank">Newton Descartes</a> de <a href="https://mairie-ouaga.bf/accueil" target="_blank">Ouagadougou.</a>
-                      Fervent défenseur des droits de personnes handicapées, il a travaillé pour plusieurs associations d'éducation, de défense et de sport pour ces personnes au <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso.</a> . Ainsi il a enseigné des enfants handicapés et orphelins, animé des séances de sensibilisation dont le thème est le handicap et l'inclusion sociale avec des enfants, des jeunes et aussi des personnes du troisième âge.
+                      Fervent défenseur des droits de personnes handicapées, il a travaillé pour plusieurs associations d'éducation, de défense et de sport pour ces personnes au <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso.</a>. Ainsi il a enseigné des enfants handicapés et orphelins, animé des séances de sensibilisation dont le thème est le handicap et l'inclusion sociale avec des enfants, des jeunes et aussi des personnes du troisième âge.
                       <br>
                       <br>
                        Gabriel apprend à coder pour mieux développer ce site web statique afin de présenter la vision de Tiki N'Yiki. 
@@ -1818,14 +1818,14 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                       <br>
                       En 2017 il était obligé de s'exiler au Canada pour des raisons de sécurité. Présentement il est un résident permanent
                      Canadien et se reconstruit une nouvelle vie dans à laquelle il veut intégrer la création d'une fondation pour continuer de soutenir des projets
-                    au profit des enfants handicapés au Burkina Faso.
+                    au profit des enfants handicapés au <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso.</a>
                     </p>      
       </div>
 
       <div class="kgp">
         <img src="https://www.zupimages.net/up/23/22/znug.jpg" alt="At Saint-Côme-Quebec">
       <figure>
-        <figcaption style="font-family: 'verdana'; font-size: 13px; color: #004bc3">
+        <figcaption style="font-family: 'verdana'; font-size: 13px; color: rgba(0, 69, 187, 0.996)">
         Gabriel à <a href="https://www.stcomelanaudiere.ca/" target="_blank"> Saint-Côme </a>* Lanaudière-QC 
         <br>
         [Juin 2023 Canada]
@@ -1836,7 +1836,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
       </div>
    
 
-    <div class="Thanking" style="padding: 1rem;"> <b style="font-family: georgia; color: #055ce8; font-size: 20px">
+    <div class="Thanking" style="padding: 1rem;"> <b style="font-family: georgia; color: rgba(0, 69, 187, 0.996); font-size: 20px">
       Merci pour votre attention et vos différents soutiens ! 
     </b>
   </div>
