--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@ animation: auto 12s infinite ease-in;
 }
 .FTR{
   width: 45%; 
-  height: 60%; 
+  height: 90%; 
   display: flex; 
   position: relative;
   flex-direction: column;
@@ -1390,7 +1390,7 @@ function myFunction() {
 
           <div class="K" style="display: grid; grid-template-rows: 0.75fr 1.25fr; row-gap: 0.5rem; width: 100%; height: auto;">
 
-          <div>
+          <div style="height: auto;">
         <p> Cette lutte ne cessera pas tant qu'il n'y aura pas plus d'inclusion sociale envers les personnes différentes. Juste pour elles de vivre décemment malgré le handicap mais en jouissant de leurs droits
          car d'aucuns savent que vivre avec un handicap est à quelque part synonyme d'endurer de multiples barrières sociales.  
          <br>
@@ -1626,7 +1626,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
       <img src="https://www.zupimages.net/up/23/24/1dre.jpg" alt="Ardoise">
       <figure>
       <figcaption style=" color: #017ffe; font-family: 'verdana'; font-size: 14px; text-align: left; margin-top: 3px;">
-        Apprentissage de la lettre E avec les accents 
+        La lettre E avec les accents 
       </figcaption>
 </figure>
     </div >
@@ -1636,7 +1636,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <img src="https://www.zupimages.net/up/23/24/umq5.jpg" alt="Enseignement au Burkina Faso">
         <figure>
         <figcaption style=" color: #017ffe; font-family: 'verdana'; font-size: 14px; text-align: left; margin-top: 3px;">
-        Initiation de jeunes filles à l'ordinateur
+        Initiation de filles à l'ordinateur
     </figcaption>
 </figure>
 
