--- a/index.html
+++ b/index.html
@@ -1512,12 +1512,10 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     </div>
 
   <div>
-    <p style="color:#0274fff9; font-size: 17.5px; font-family: Arial, Helvetica, sans-serif; text-align: left; padding: 4px; line-height: 23px;">
-      Sur la base de ces difficultés constituées de barrières sociales, d'insuffisance d'infractrustures, de services et de moyens de déplacements adaptés, Tiki N'Yiki envisage construire un centre nommé Accadémie Tiki N'Yiki 
-      Dans ce centre il y aura des salles de classe, des chambres adaptées, des salles de conditionnement sportif, des salles de réunion, des bureaux et des cuisines pour les enseignants et certain-es élèves ou étudiant-es handicapé-es dont les familles habitent en campagne. 
-      
-      Le projet prendra en compte la fabrication et l'octroi de tricyles et/ou de fauiteuils roulants, moyens de déplacement 
-      très utiles aux étudiant-es pour avoir une certaine mobilité en cas de nécessité d'aller en dehors de l'accadémie.
+    <p style="color:#0274fff9; font-size: 17.5px; font-family: Arial, Helvetica, sans-serif; text-align: left; padding: 10px; line-height: 24px;">
+      Vu ces différentes difficultés faites de barrières sociales, d'insuffisance d'infractrustures, de services et de moyens de déplacements adaptés, Tiki N'Yiki envisage construire un centre adapté nommé Accadémie Tiki N'Yiki.
+      Cette accadémie sera constituée des salle de classe, desà chambres adaptées, de salles de conditionnement sportif, de salles de réunion, de bureaux et de cuisines. Certain-es élèves ou étudiant-es handicapé-es dont les familles habitent en campagne seront admis à habiter dans les logements adaptés et bénéficieront dwe moyens de déplacement 
+       pour avoir une certaine mobilité en cas de nécessité.
     </p>
    <br>
         </div>
