--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@ animation: auto 12s infinite ease-in;
   justify-content: center;
   justify-items: center;
   padding: 10px;
-  height: 925px;
+  height: auto;
   width: 73%;
 }
 
@@ -1388,9 +1388,9 @@ function myFunction() {
 
         <div class="k1">
 
-          <div class="K" style="display: grid; grid-template-rows: 0.75fr 1.25fr; row-gap: 0.5rem; width: 100%; height: auto;">
+          <div class="K" style="display: grid; grid-template-rows: 0.5fr 1.25fr; row-gap: 0.5rem; width: 100%; height: auto;">
 
-          <div style="height: auto;">
+          <div style="width: 100%; height: auto;">
         <p> Cette lutte ne cessera pas tant qu'il n'y aura pas plus d'inclusion sociale envers les personnes différentes. Juste pour elles de vivre décemment malgré le handicap mais en jouissant de leurs droits
          car d'aucuns savent que vivre avec un handicap est à quelque part synonyme d'endurer de multiples barrières sociales.  
          <br>
