--- a/index.html
+++ b/index.html
@@ -1840,10 +1840,10 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
       <div class="kgp">
         <img src="https://www.zupimages.net/up/23/22/znug.jpg" alt="At Saint-Côme-Quebec">
       <figure>
-        <figcaption style="font-family: 'verdana'; font-size: 13px; color: rgba(0, 69, 187, 0.996)">
-        Gabriel à <a href="https://www.stcomelanaudiere.ca/" target="_blank"> Saint-Côme </a>* Lanaudière-QC 
+        <figcaption style="font-family: 'verdana'; font-size: 13px; color: rgba(0, 69, 187, 0.996); margin-top: 0.5rem;">
+        Gabriel à <a href="https://www.stcomelanaudiere.ca/" target="_blank"> Saint-Côme </a>* Lanaudière 
         <br>
-        [Juin 2023 Canada]
+        [Juin 2023 Quebec]
       </figcaption> 
     </figure>
         </div>
