--- a/index.html
+++ b/index.html
@@ -523,9 +523,9 @@ opacity: 1;
 }
 
 .YTP{
-  padding: 0.5rem;
+  padding: 0.35rem;
   text-align: left;
-  font-size: 20.5px;
+  font-size: 20px;
   line-height: 24.5px;
   color: rgba(115, 115, 115, 0.802);
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -936,7 +936,7 @@ animation: auto 12s infinite ease-in;
   justify-items: center;
   column-gap: 1rem;
   width: 100%;
-  height: 50%;
+  height: auto;
 }
 
 .ORDI1 img{
@@ -1218,7 +1218,7 @@ function myFunction() {
           sur les choses que leur handicap ne les empêche pas de bien faire et ne pas regretter les choses avec lesquelles il interfère. 
           Ne soyez handicapé ni mentalement, ni physiquement 
         <br>
-        <em style="color: #02a6ff; font-family: Arial, Helvetica, sans-serif; font-size: 11.91px;">[Stephen Hawking, métaphysicien, cosmologue et auteur Anglais]</em>
+        <em style="color: #02a6ff; font-family: Arial, Helvetica, sans-serif; font-size: 11.5px;">[Stephen Hawking, métaphysicien, cosmologue et auteur Anglais]</em>
       
         </b>
         </div>
