--- a/index.html
+++ b/index.html
@@ -1832,8 +1832,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                       <br>
                       <br>
                       En 2017 il était obligé de s'exiler au Canada pour des raisons de sécurité. Présentement il est un résident permanent
-                     Canadien et se reconstruit une nouvelle vie dans à laquelle il veut intégrer la création d'une fondation pour continuer de soutenir des projets
-                    au profit des enfants handicapés au <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso.</a>
+                     Canadien et se reconstruit une nouvelle vie. Il veut créer une fondation pour continuer à soutenir les enfants handicapés au <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso.</a>
                     </p>      
       </div>
 
