--- a/index.html
+++ b/index.html
@@ -525,8 +525,8 @@ opacity: 1;
 .YTP{
   padding: 0.35rem;
   text-align: left;
-  font-size: 20px;
-  line-height: 24.5px;
+  font-size: 18px;
+  line-height: 24px;
   color: rgba(115, 115, 115, 0.802);
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
@@ -1877,5 +1877,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 </div>
 </body>
+</html>
 </html>
 </html>
