--- a/index.html
+++ b/index.html
@@ -1197,7 +1197,7 @@ function myFunction() {
     </div>
   </a>
 
-  <div style="display: grid; justify-content: center; justify-items: center; margin-left: 3.5rem; text-align: center;">
+  <div style="display: grid; justify-content: center; justify-items: center; text-align: center;">
   Bienvenue ! Ce site web est en développement. 
 <br>
   Merci pour votre compréhension ! Bonne Visite !</p>
