--- a/index.html
+++ b/index.html
@@ -68,8 +68,13 @@
     }
 
     .DAH{
-      width: 90%;
-      margin-left: 15rem;
+      display: grid;
+      grid-template-columns: 1fr;
+      justify-content: center;
+      justify-items: center;
+      width: 80%;
+      height: 50%;
+      margin-left: 12rem;
     }
 .DAH img{
   width: 50%;
@@ -177,7 +182,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 -1px 4.5rem -10px rgba(68, 68, 68, 0.69);
+                 box-shadow: 0 -1px 4.5rem -10px rgba(70, 70, 70, 0.742);
                  border-top: 0.25rem solid #00aafffa;
           }
           
@@ -209,12 +214,11 @@
           .navbar0{
             display: grid;
            grid-template-columns: 0.5fr 1.5fr;
-           column-gap: 1rem;
-            justify-content: space-between;
+            justify-content: center;
             justify-items: center;
             width: 100%; 
             height: 160px; 
-            background: rgba(206, 206, 206, 0.382);
+            background: rgba(206, 206, 206, 0.334);
             color: rgba(0, 0, 139, 0.66);
             font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
             font-size: 2rem;
