--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
       width: 80%;
       height: 50%;
       margin-left: 12rem;
+      margin-top: 0.5rem;
     }
 .DAH img{
   width: 50%;
@@ -1201,7 +1202,7 @@ function myFunction() {
     </div>
   </a>
 
-  <div style="display: grid; justify-content: center; justify-items: center; text-align: center;">
+  <div style="display: grid; justify-content: center; justify-items: center; text-align: center; margin-top: 1rem;">
   Bienvenue ! Ce site web est en développement. 
 <br>
   Merci pour votre compréhension ! Bonne Visite !</p>
@@ -1892,5 +1893,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 </div>
 </body>
+</html>
 </html>
 </html>
