--- a/index.html
+++ b/index.html
@@ -1202,7 +1202,7 @@ function myFunction() {
     </div>
   </a>
 
-  <div style="display: grid; justify-content: center; justify-items: center; text-align: center; margin-top: 1rem;">
+  <div style="display: grid; justify-content: center; justify-items: center; font-size: 27px; text-align: center; margin-top: 1rem;">
   Bienvenue ! Ce site web est en développement. 
 <br>
   Merci pour votre compréhension ! Bonne Visite !</p>
@@ -1893,6 +1893,5 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 </div>
 </body>
-</html>
 </html>
 </html>
