--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       justify-items: center;
       width: 80%;
       height: 50%;
-      margin-left: 12rem;
+      margin-left: 11rem;
       margin-top: 0.5rem;
     }
 .DAH img{
@@ -215,8 +215,9 @@
           .navbar0{
             display: grid;
            grid-template-columns: 0.5fr 1.5fr;
-            justify-content: center;
+            justify-content: space-between;
             justify-items: center;
+            column-gap: 1rem;
             width: 100%; 
             height: 160px; 
             background: rgba(206, 206, 206, 0.334);
