--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         justify-content: center;
         justify-items: center;
         width: 100%;
-        height: 0.01rem;
+        height: auto;
         word-spacing: 1px;
     }
 
@@ -73,9 +73,7 @@
       justify-content: center;
       justify-items: center;
       width: 80%;
-      height: 50%;
-      margin-left: 11rem;
-      margin-top: 0.5rem;
+      margin-top: 2rem;
     }
 .DAH img{
   width: 50%;
@@ -204,7 +202,7 @@
   color:darkblue;
   padding: 3px;
   margin-top: -8px;
-  
+  margin-left: -2rem;
 }
 
 .TYK1:hover{
