--- a/index.html
+++ b/index.html
@@ -1512,7 +1512,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
   <div>
     <p style="color:#0274fff9; font-size: 17.5px; font-family: Arial, Helvetica, sans-serif; text-align: left; padding: 10px; line-height: 24px;">
       Vu ces différentes difficultés faites de barrières sociales, d'insuffisance d'infractrustures, de services et de moyens de déplacements adaptés, Tiki N'Yiki envisage construire un centre adapté nommé Accadémie Tiki N'Yiki.
-      Cette accadémie sera constituée de salles de classe, de chambres adaptées, de salles de conditionnement sportif, de salles de réunion, de bureaux et de cuisines. Certain-es élèves ou étudiant-es handicapé-es dont les familles habitent en campagne seront admis à habiter dans les logements adaptés et bénéficieront dwe moyens de déplacement 
+      Cette accadémie sera constituée de salles de classe, de chambres adaptées, de salles de conditionnement sportif, de salles de réunion, de bureaux et de cuisines. Certain-es élèves ou étudiant-es handicapé-es dont les familles habitent en campagne seront admis-es à habiter dans les logements adaptés et bénéficieront de moyens de déplacement 
        pour avoir une certaine mobilité en cas de nécessité.
     </p>
    <br>
