--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
       align-items: center;
       width: 100%;
       height: 1.5rem;
-      font-family: georgia;
-      font-size: 20px;
-      color:  rgba(47, 121, 200, 0.954);
+      color:  rgba(13, 14, 14, 0.954);
       padding: 5px;
       margin-top: -1rem;
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+      font-size: 15px;
     }
 
     .Translator:hover{
@@ -100,11 +100,11 @@
       align-items: center;
       width: 100%;
       height: 1.5rem;
-      font-family: georgia;
-      font-size: 20px;
-      color:  rgba(47, 121, 200, 0.954);
+      color:  rgba(13, 14, 14, 0.954);
       padding: 5px;
       margin-top: -1rem;
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+      font-size: 15px;
     }
 
     .Calculator:hover{
@@ -118,14 +118,13 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      cursor: pointer;
       width: 100%;
       height: 1.5rem;
-      font-family: georgia;
-      font-size: 20px;
-      color:  rgba(47, 121, 200, 0.954);
+      color:  rgba(13, 14, 14, 0.954);
       padding: 5px;
       margin-top: -1rem;
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+      font-size: 15px;
     }
 
     .dico:hover{
@@ -136,17 +135,16 @@
 
     .datime{
       display: flex;
-      position: relative;
       flex-direction: column;
-      justify-content: left;
+      justify-content: center;
       align-items: center;
       width: 100%;
       height: 1.5rem;
-      font-family: georgia;
-      font-size: 20px;
-      color:  rgba(47, 121, 200, 0.954);
+      color:  rgba(13, 14, 14, 0.954);
       padding: 5px;
-      margin-top: -1rem;
+      margin-top: -0.5rem;
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+      font-size: 15px;
     }
 
     .datime:hover{
@@ -1090,24 +1088,24 @@ function myFunction() {
 
         <a href="https://disabilitycreditcanada.com/top-16-famous-people-with-disabilities/" target="_blank">
         <div class="Translator">
-        <b style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 13px;">Fameux handicapés</b>
+        <b>Fameux handicapés</b>
         </div>
       </a>
       
         <a href="https://www.online-calculator.com/full-screen-calculator/" target="_blank">
         <div class="Calculator">
-          <b style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 13px;">Calculatrice</b>
+          <b >Calculatrice</b>
         </div>
       </a>
   
       <a href="https://dictionnaire.lerobert.com/definition/paradigme" target="_blank">
         <div class="dico">
-          <b style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 13px;">Dictionnaire</b>
+          <b>Dictionnaire</b>
         </div>
       </a>
       <a href="https://www.timeanddate.com/calendar/" target="_blank">
         <div class="datime">
-          <b> <p id="demo" style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 12px;">
+          <b> <p id="demo">
                   <span id="datetime" > </span>
                </p></b>
               </div>
