--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       padding: 5px;
       margin-top: -0.5rem;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
-      font-size: 15px;
+      font-size: 13px;
     }
 
     .datime:hover{
@@ -1873,5 +1873,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 </div>
 </body>
+</html>
 </html>
 </html>
