--- a/index.html
+++ b/index.html
@@ -197,17 +197,17 @@
 
           .navbar0{
             display: grid;
-           grid-template-columns: 0.5fr 1.5fr;
+           grid-template-columns: 0.3fr 1.7fr;
             justify-content: space-between;
             justify-items: center;
             column-gap: 1rem;
             width: 100%; 
-            height: 160px; 
-            background: rgba(206, 206, 206, 0.334);
-            color: rgba(0, 0, 139, 0.66);
+            height: 157px; 
+            background: rgba(206, 206, 206, 0.352);
+            color: rgba(32, 32, 134, 0.758);
             font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
             font-size: 2rem;
-            padding: 0.4rem;
+            padding: 0.5rem;
           }
           
           .Joint-Point{
@@ -1877,5 +1877,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 </div>
 </body>
+</html>
 </html>
 </html>
