--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
     }
 
     .DAH{
-      display: grid;
-      grid-template-columns: 1fr;
-      justify-content: center;
+      display: grid; 
+      grid-template-columns: 1fr 1fr;"
+      justify-content: space-between;
       justify-items: center;
       width: 80%;
       margin-top: 2rem;
     }
 .DAH img{
-  width: 50%;
+  width: 100%;
   border-radius: 50%;
   cursor: pointer;
 }
@@ -1171,8 +1171,13 @@ function myFunction() {
 
   <a href="https://gorampe.com/vivre-en-fauteuil-roulant-7-mythes-et-realites/" target="_blank">
     <div class="DAH"> 
+    <div>
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT8RaX1EMvIv5A0vsX1ptakOpBMnvIuT2BSfg&usqp=CAU" alt="Disability Logo">
     </div>
+  <div style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 18px; color: #2072c4;">
+    Témoignage
+</div>
+  </div>
   </a>
 
   <div style="display: grid; justify-content: center; justify-items: center; font-size: 27px; text-align: center; margin-top: 1rem;">
@@ -1877,6 +1882,5 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 </div>
 </body>
-</html>
 </html>
 </html>
