--- a/index.html
+++ b/index.html
@@ -958,7 +958,7 @@ height: auto;
     justify-content: center;
     text-align: justify;
     width: 73.5%;
-    height: 820px;
+    height: 810px;
     font-family:  'arial'; 
     font-size: 1.1rem; 
     color: rgba(13, 13, 13, 0.866);
@@ -996,7 +996,7 @@ height: auto;
   justify-content: space-between;
   justify-items: center;
   width: 100%;
-  height: 50%;
+  height: auto;
 }
 
 .Avenue{
