--- a/index.html
+++ b/index.html
@@ -56,14 +56,13 @@
 
     .DAH{
       display: grid; 
-      grid-template-columns: 1fr 1fr;"
+      grid-template-rows: 1fr 1fr;
       justify-content: space-between;
       justify-items: center;
-      width: 80%;
-      margin-top: 2rem;
+      width: 40%;
     }
 .DAH img{
-  width: 100%;
+  width: 50%;
   border-radius: 50%;
   cursor: pointer;
 }
@@ -192,13 +191,13 @@
 
 .TYK1:hover{
   transform: rotate(360deg);
-  transition: 0.5s ease-in;
+  transition: 0.99s ease;
 }
 
           .navbar0{
             display: grid;
-           grid-template-columns: 0.3fr 1.7fr;
-            justify-content: space-between;
+           grid-template-columns: 0.5fr 1.5fr;
+            justify-content: center;
             justify-items: center;
             column-gap: 1rem;
             width: 100%; 
