--- a/index.html
+++ b/index.html
@@ -951,13 +951,13 @@ height: auto;
 
 .HLTHY{
   display: grid;
-  grid-template-rows: 0.35fr 1.65fr;
+  grid-template-rows: 0.5fr 1fr;
     background: #fff;
-    justify-items: center;
+    justify-items: space-between;
     justify-content: center;
     text-align: justify;
     width: 73.5%;
-    height: 810px;
+    height: 820px;
     font-family:  'arial'; 
     font-size: 1.1rem; 
     color: rgba(13, 13, 13, 0.866);
@@ -968,7 +968,7 @@ height: auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 0.5rem;
-  justify-content: center;
+  justify-content: space-between;
   justify-items: center;
   width: 100%;
   height: auto;
@@ -1451,7 +1451,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber certaines b
     Pourquoi elles sont mises de côté, ignorées s'il s'agit de leur apporter des soins médicaux ? 
     <br>  
     <br>
-    L'unique réponse satisfaisante et commune à ces questions est: <b style="color: red">La DISCRIMINATION. </b>  
+    L'unique réponse satisfaisante et commune à ces questions est : <b style="color: red; font-family: Georgia, 'Times New Roman', Times, serif;">LA DISCRIMINATION. </b>  
     <br>  
     <br>
     <b style="color: rgb(0, 166, 255); font-size: 19.6px;">Mais il faut que ces discriminations cessent et que les barrières sociales tombent car les personnes handicapées sont avant tout des êtres humains qui ont aussi des droits humains.</b>
@@ -1550,13 +1550,13 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
   <br>
       </p> 
         <b>
-     <a href="https://www.education.gov.bf/accueil" style="color: red;" target="blank">1. L'éducation</a>
+     <a href="https://www.education.gov.bf/accueil" style="color: green;" target="blank">1. L'éducation</a>
          <br>
-     <a href="https://www.sante.gov.bf/accueil" style="color: red;" target="blank">2. La santé et les soins</a>
+     <a href="https://www.sante.gov.bf/accueil" style="color: green;" target="blank">2. La santé et les soins</a>
          <br>
-     <a href="https://fews.net/fr/west-africa/burkina-faso/food-security-outlook/february-2022" style="color: red;" target="blank">3. La sécurité alimentaire</a>
+     <a href="https://fews.net/fr/west-africa/burkina-faso/food-security-outlook/february-2022" style="color: green;" target="blank">3. La sécurité alimentaire</a>
          <br>
-     <a href="https://www.un.org/fr/climatechange/what-is-climate-change" style="color: red;" target="blank">4. Le changement climatique</a> 
+     <a href="https://www.un.org/fr/climatechange/what-is-climate-change" style="color: green;" target="blank">4. Le changement climatique</a> 
      </b>
     </div>
 
@@ -1647,6 +1647,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
   </div>
 </div>
 
+
       <div class="HLTHY">
         <div >
         <hr style=" color: rgb(13, 31, 136); justify-self: center;"> 
@@ -1694,7 +1695,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
       </div>
     </a>
       </div>
-    
+  
      
       <div class="k1">
 
