--- a/index.html
+++ b/index.html
@@ -951,13 +951,14 @@ height: auto;
 
 .HLTHY{
   display: grid;
-  grid-template-rows: 0.5fr 1fr;
+  grid-template-rows: 0.5fr 0.5fr;
     background: #fff;
-    justify-items: space-between;
-    justify-content: center;
+    justify-items: center;
+    justify-content: space-between;
+    row-gap: 0.2rem;
     text-align: justify;
     width: 73.5%;
-    height: 820px;
+    height: 850px;
     font-family:  'arial'; 
     font-size: 1.1rem; 
     color: rgba(13, 13, 13, 0.866);
