--- a/index.html
+++ b/index.html
@@ -951,14 +951,14 @@ height: auto;
 
 .HLTHY{
   display: grid;
-  grid-template-rows: 0.5fr 0.5fr;
+  grid-template-rows: 0.25fr 0.15fr;
     background: #fff;
     justify-items: center;
     justify-content: space-between;
     row-gap: 0.2rem;
     text-align: justify;
     width: 73.5%;
-    height: 850px;
+    height: 920px;
     font-family:  'arial'; 
     font-size: 1.1rem; 
     color: rgba(13, 13, 13, 0.866);
@@ -972,7 +972,7 @@ height: auto;
   justify-content: space-between;
   justify-items: center;
   width: 100%;
-  height: auto;
+  height: 700px;
   font-family:  'arial'; 
   font-size: 1.1rem; 
   color: rgba(13, 13, 13, 0.866);
@@ -980,15 +980,12 @@ height: auto;
 
 }
 
-.STN1 img{
+.STN img{
   width: 100%;
   height: 50%;
 }
 
-.STN2 img{
-  width: 100%;
-  height: 50%;
-}
+
 .SEKU{
   display: grid;
   grid-template-rows: 1fr 0.25fr;
@@ -1675,7 +1672,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
        
      <div class="Healthy">
         
-        <div class="STN1">
+        <div class="STN">
           <img src="https://www.zupimages.net/up/23/16/0k53.jpg" alt="Centre hospitalier régional">
         <figure>
           <figcaption style=" color: #017ffe; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
@@ -1684,7 +1681,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     </figure>
     </div>
   
-    <div class="STN2">
+    <div class="STN">
     <img src="https://www.zupimages.net/up/23/06/hx80.png" alt="Emergency Montreal Hospital">
     <figure>
       <figcaption style=" color: #017ffe; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
