--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@ animation: auto 12s infinite ease-in;
     height: auto;
     font-family:  'arial'; 
     font-size: 1.1rem; 
-    color: rgba(13, 13, 13, 0.866);
+    color: rgba(13, 13, 13, 0.963);
     line-height: 25px;
     padding: 10px;
     word-spacing: 1px;
@@ -768,7 +768,7 @@ animation: auto 12s infinite ease-in;
     height: auto;
     font-family:  'arial'; 
     font-size: 1.1rem; 
-    color: rgba(13, 13, 13, 0.866);
+    color: rgba(13, 13, 13, 0.963);
     line-height: 25px;
     word-spacing: 1px;
 }
@@ -951,14 +951,14 @@ height: auto;
 
 .HLTHY{
   display: grid;
-  grid-template-rows: 0.5fr 0.15fr;
+  grid-template-rows: 1fr 0.5fr;
     background: #fff;
     justify-items: center;
-    justify-content: space-between;
+    justify-content: center;
     row-gap: 0.2rem;
     text-align: justify;
     width: 73.5%;
-    height: 920px;
+    height: auto;
     font-family:  'arial'; 
     font-size: 1.1rem; 
     color: rgba(13, 13, 13, 0.866);
@@ -972,7 +972,7 @@ height: auto;
   justify-content: space-between;
   justify-items: center;
   width: 100%;
-  height: 500px;
+  height: auto;
   font-family:  'arial'; 
   font-size: 1.1rem; 
   color: rgba(13, 13, 13, 0.866);
@@ -980,9 +980,9 @@ height: auto;
 
 }
 
-.STN img{
+.Healthy img{
   width: 100%;
-  height: 50%;
+  height: 45%;
 }
 
 
@@ -993,7 +993,7 @@ height: auto;
   justify-content: space-between;
   justify-items: center;
   width: 100%;
-  height: 50%;
+  height: auto;
 }
 
 .Avenue{
@@ -1672,7 +1672,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
        
      <div class="Healthy">
         
-        <div class="STN">
+        <div >
           <img src="https://www.zupimages.net/up/23/16/0k53.jpg" alt="Centre hospitalier régional">
         <figure>
           <figcaption style=" color: #017ffe; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
@@ -1681,7 +1681,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     </figure>
     </div>
   
-    <div class="STN">
+    <div >
     <img src="https://www.zupimages.net/up/23/06/hx80.png" alt="Emergency Montreal Hospital">
     <figure>
       <figcaption style=" color: #017ffe; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
@@ -1880,5 +1880,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 </div>
 </body>
+</html>
 </html>
 </html>
