--- a/index.html
+++ b/index.html
@@ -958,7 +958,7 @@ height: auto;
     row-gap: 0.2rem;
     text-align: justify;
     width: 73.5%;
-    height: auto;
+    height: 860px;
     font-family:  'arial'; 
     font-size: 1.1rem; 
     color: rgba(13, 13, 13, 0.866);
