--- a/index.html
+++ b/index.html
@@ -958,7 +958,7 @@ height: auto;
     row-gap: 1rem;
     text-align: justify;
     width: 73.5%;
-    height: 900px;
+    height: 920px;
     font-family:  'arial'; 
     font-size: 1.1rem; 
     color: rgba(13, 13, 13, 0.866);
@@ -972,12 +972,12 @@ height: auto;
   justify-content: space-between;
   justify-items: center;
   width: 100%;
-  height: auto;
+  height: 300px;
   font-family:  'arial'; 
   font-size: 1.1rem; 
   color: rgba(13, 13, 13, 0.866);
   line-height: 25px;
-
+  border-bottom: 0.15rem solid#01b2fe;
 }
 
 .Healthy img{
@@ -1699,8 +1699,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 <div class="SEKU">
       <div>
-        <hr style=" color: rgb(13, 31, 136); justify-self: center;"> 
-
         <span style="background: transparent; font-family: 'georgia'; font-size: 25px; color: rgb(42, 61, 172); text-align: left;">
           <strong>3. Sécurité Alimentaire
           </strong>
