--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@ height: auto;
   justify-content: space-between;
   justify-items: center;
   width: 100%;
-  height: 300px;
+  height: 240px;
   font-family:  'arial'; 
   font-size: 1.1rem; 
   color: rgba(13, 13, 13, 0.866);
@@ -982,7 +982,7 @@ height: auto;
 
 .Healthy img{
   width: 100%;
-  height: 50%;
+  height: 40%;
 }
 
 
@@ -1385,7 +1385,7 @@ function myFunction() {
           <div class="K" style="display: grid; grid-template-rows: 0.5fr 1.25fr; row-gap: 0.5rem; width: 100%; height: auto;">
 
           <div style="width: 100%; height: auto;">
-        <p> Cette lutte ne cessera pas tant qu'il n'y aura pas plus d'acceptation et d'inclusion sociale envers les personnes différentes. Juste pour elles de vivre décemment malgré le handicap mais en jouissant de leurs droits.
+        <p> Cette lutte ne cessera pas tant qu'il n'y aura pas plus d'acceptation et d'inclusion sociale envers les personnes différentes. Juste pour elles de vivre décemment malgré la différence mais en jouissant de leurs droits.
          
          <br>
          En Afrique et particulièrement au Burkina Faso, certaines personnes handicapées se sentent très souvent comme des citoyens de seconde classe du fait de la négligence, de l'exclusion dont elles sont victimes. Si elles vivent exclues de la société comme une île au milieu d'un océan très loin de la terre ferme sans aucune connection, il est très difficile de rencontrer des opportunités. 
