--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
     .DAH{
       display: grid; 
       grid-template-rows: 1fr 1fr;
-      row-gap: 0.27rem;
       justify-content: space-between;
       justify-items: center;
       width: 45%;
@@ -83,11 +82,11 @@
 }
 
 .TEM:hover{
-  background:-webkit-linear-gradient(rgba(223, 223, 2, 0.945) 30%,rgb(249, 249, 0) 70%) ;
+  background:-webkit-linear-gradient(rgba(223, 223, 2, 0.964) 30%,rgb(249, 249, 0) 70%) ;
   transition: 0.99s ease;
   color: #ff0;
-  border-top-left-radius: 47%;
-  border-bottom-left-radius: 47%;
+  border-top-left-radius: 49%;
+  border-bottom-left-radius: 49%;
   border-top-right-radius: 50%;
   border-bottom-right-radius: 50%;
 }
@@ -466,7 +465,7 @@ hr{
    
 }
 ::-webkit-scrollbar-track-piece{
-    background: rgba(171, 171, 171, 0.701);
+    background: rgba(171, 171, 171, 0.768);
     padding: 10px;
 }
 ::-webkit-scrollbar-thumb{
@@ -1192,7 +1191,7 @@ function myFunction() {
     </div>
 
   <div class="TEM" style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 16px; color: #2352a3f9;">
-    Témoignage
+  <b> Témoignage</b>
 </div>
 
   </div>
