--- a/index.html
+++ b/index.html
@@ -969,13 +969,13 @@ height: auto;
 
 .HLTHY{
   display: grid;
-  grid-template-rows: 1fr 0.5fr;
+  grid-template-rows: 0.5fr 0.35fr;
     background: #fff;
     justify-items: center;
     justify-content: center;
     text-align: justify;
     width: 73.5%;
-    height: 830px;
+    height: 800px;
     font-family:  'arial'; 
     font-size: 1.1rem; 
     color: rgba(13, 13, 13, 0.866);
@@ -990,12 +990,11 @@ height: auto;
   justify-content: space-between;
   justify-items: center;
   width: 100%;
-  height: 290px;
+  height: 270px;
   font-family:  'arial'; 
   font-size: 1.1rem; 
   color: rgba(13, 13, 13, 0.866);
   line-height: 25px;
-  padding: 10px;
 }
 
 .Healthy img{
@@ -1006,12 +1005,13 @@ height: auto;
 
 .SEKU{
   display: grid;
-  grid-template-rows: 1fr 0.25fr;
+  grid-template-rows: 1fr 0.5fr;
   column-gap: 1rem;
   justify-content: space-between;
   justify-items: center;
   width: 100%;
   height: auto;
+  margin-top: 1rem;
 }
 
 .Avenue{
