--- a/index.html
+++ b/index.html
@@ -1665,7 +1665,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
   </div>
 </div>
 
-
+<div class="k1">
       <div class="HLTHY">
         <div >
         <hr style=" color: rgb(13, 31, 136); justify-self: center;"> 
@@ -1713,6 +1713,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
       </div>
     </a>
       </div>
+    </div>
    
      
       <div class="k1">
