--- a/index.html
+++ b/index.html
@@ -1009,7 +1009,7 @@ height: auto;
   justify-content: space-between;
   justify-items: center;
   width: 100%;
-  height: auto;
+  height: 950px;
   margin-top: 2rem;
 }
 
@@ -1665,7 +1665,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
   </div>
 </div>
 
-<div class="k1">
       <div class="HLTHY">
         <div >
         <hr style=" color: rgb(13, 31, 136); justify-self: center;"> 
@@ -1712,7 +1711,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         </div>
       </div>
     </a>
-      </div>
+      
     </div>
    
      
@@ -1903,5 +1902,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 </div>
 </body>
+</html>
 </html>
 </html>
