--- a/index.html
+++ b/index.html
@@ -1009,8 +1009,8 @@ height: auto;
   justify-content: space-between;
   justify-items: center;
   width: 100%;
-  height: 950px;
-  margin-top: 2rem;
+  height: auto;
+  margin-top: 3rem;
 }
 
 .Avenue{
@@ -1902,6 +1902,5 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 </div>
 </body>
-</html>
 </html>
 </html>
