--- a/index.html
+++ b/index.html
@@ -1695,7 +1695,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
           <img src="https://www.zupimages.net/up/23/16/0k53.jpg" alt="Centre hospitalier régional">
         <figure>
           <figcaption style=" color: #017ffe; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
-            Centre Hospitalier Régional de Ziniare
+            CHR de Ziniare
             </figcaption>
     </figure>
     </div>
@@ -1902,5 +1902,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 </div>
 </body>
+</html>
 </html>
 </html>
